fix: body overflow hidden when desktop

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,9 @@ body {
         top: 50% !important;
     }
 }
+
+@media (min-width: 1024px) {
+    body{
+        overflow: hidden;
+    }
+}
